package cars;

public class ElectricalEngine extends Engine {
    public ElectricalEngine(int speed, Manufacturer manufacturer) {
        super(speed, manufacturer);
    }
}
