package cars;

public class EngineManufacturer extends Manufacturer {
    private String brandName;
}
