package cars;

public class Manufacturer {
    public Manufacturer() {
    }
}
