package cars;

public class NuclearEngine extends Engine{
    public NuclearEngine(int speed, Manufacturer manufacturer) {
        super(speed, manufacturer);
    }
}
