package cars;

public class Producer extends Manufacturer {
    private String brandName;

    public Producer(String brandName) {
        this.brandName = brandName;
    }
}
