package cars;

public class SolarEngine extends Engine{
    public SolarEngine(int speed, Manufacturer manufacturer) {
        super(speed, manufacturer);
    }
}
