package cars;

public class ThermalEngine extends Engine {
    public ThermalEngine(int speed, Manufacturer manufacturer) {
        super(speed, manufacturer);
    }
}
